<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SCHEALL_ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >
    
	<HorizontalScrollView
	    android:id="@+id/SCHEALL_HScrollView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal" >

		<RelativeLayout
		    android:id="@+id/SCHEALL_RLayout"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin" >
		    
		    <RelativeLayout
		        android:id="@+id/SCHEALL_RLayout_ScheAllarme"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@xml/bordo_rosso" >

                <TextView
                    android:id="@+id/SCHEALL_tv_ScheAllarme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/schedulatore_allarme"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/SCHEALL_line"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_alignLeft="@+id/SCHEALL_tv_ScheAllarme"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/SCHEALL_tv_ScheAllarme"
                    android:background="@android:color/black" />

                <RadioGroup
                    android:id="@+id/SCHEALL_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/SCHEALL_tv_ScheAllarme"
                    android:layout_below="@+id/SCHEALL_tv_ScheAllarme"
                    android:layout_marginTop="20dp" >

                    <RadioButton
                        android:id="@+id/SCHEALL_rb_Disabilitato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/disabilitato"
                        android:tag="n" />

                    <RadioButton
                        android:id="@+id/SCHEALL_rb_UnaSolaVolta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:checked="false"
                        android:tag="o"
                        android:text="@string/una_sola_volta" />

                    <RadioButton
                        android:id="@+id/SCHEALL_rb_Giornaliero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:checked="false"
                        android:tag="d"
                        android:text="@string/giornaliero" />

                    <RadioButton
                        android:id="@+id/SCHEALL_rb_Settimanale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:checked="false"
                        android:tag="w"
                        android:text="@string/settimanale" />

                    <RadioButton
                        android:id="@+id/SCHEALL_rb_Mensile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:checked="false"
                        android:tag="m"
                        android:text="@string/mensile" />

                    <RadioButton
                        android:id="@+id/SCHEALL_rb_MensileE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:checked="false"
                        android:tag="e"
                        android:text="@string/mensile_e" />

                </RadioGroup>

                <RelativeLayout
                    android:id="@+id/SCHEALL_RLayout_Mesi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/SCHEALL_RLayout_Giorno"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/SCHEALL_RLayout_Giorno"
                    android:background="@xml/bordo_blu" >

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_TuttiIMesi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/tutti_i_mesi" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Gennaio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/SCHEALL_cb_TuttiIMesi"
                        android:text="@string/gennaio" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Febbraio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/SCHEALL_cb_TuttiIMesi"
                        android:layout_toRightOf="@+id/SCHEALL_cb_TuttiIMesi"
                        android:text="@string/febbraio" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Marzo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/SCHEALL_cb_Gennaio"
                        android:text="@string/marzo" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Aprile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/SCHEALL_cb_Febbraio"
                        android:layout_below="@+id/SCHEALL_cb_Febbraio"
                        android:text="@string/aprile" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Maggio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/SCHEALL_cb_Marzo"
                        android:text="@string/maggio" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Giugno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/SCHEALL_cb_Aprile"
                        android:layout_below="@+id/SCHEALL_cb_Aprile"
                        android:layout_toRightOf="@array/baudrate"
                        android:text="@string/giugno" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Luglio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/SCHEALL_cb_Maggio"
                        android:text="@string/luglio" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Agosto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/SCHEALL_cb_Giugno"
                        android:layout_below="@+id/SCHEALL_cb_Giugno"
                        android:text="@string/agosto" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Settembre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/SCHEALL_cb_Luglio"
                        android:text="@string/settembre" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Ottobre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/SCHEALL_cb_Agosto"
                        android:layout_below="@+id/SCHEALL_cb_Agosto"
                        android:text="@string/ottobre" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Novembre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/SCHEALL_cb_Settembre"
                        android:text="@string/novembre" />

                    <CheckBox
                        android:id="@+id/SCHEALL_cb_Dicembre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/SCHEALL_cb_Ottobre"
                        android:layout_below="@+id/SCHEALL_cb_Ottobre"
                        android:text="@string/dicembre" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/SCHEALL_RLayout_Giorno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/SCHEALL_rg"
                    android:layout_marginLeft="25dp"
                    android:layout_toRightOf="@+id/SCHEALL_rg"
                    android:background="@xml/bordo_blu" >

                    <EditText
                        android:id="@+id/SCHEALL_et_DelGiorno"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/SCHEALL_tv_DelGiorno"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/SCHEALL_tv_DelGiorno"
                        android:ems="10"
                        android:hint="@string/hint_giorni"
                        android:inputType="number"
                        android:maxLength="2" >
                </EditText>

<TextView
    android:id="@+id/SCHEALL_tv_DelGiorno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/SCHEALL_tv_AlleOre"
    android:layout_below="@+id/SCHEALL_tv_GiorniSettimana"
    android:layout_marginTop="35dp"
    android:text="@string/del_giorno" />

<TextView
    android:id="@+id/SCHEALL_tv_GiorniSettimana"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/SCHEALL_tv_AlleOre"
    android:layout_below="@+id/SCHEALL_tv_OgniNSettimane"
    android:layout_marginTop="35dp"
    android:text="@string/ogni" />

<TextView
    android:id="@+id/SCHEALL_tv_OgniNSettimane"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/SCHEALL_tv_AlleOre"
    android:layout_below="@+id/SCHEALL_tv_IlGiorno"
    android:layout_marginTop="35dp"
    android:text="@string/ogni" />

<Spinner
    android:id="@+id/SCHEALL_sp_GiorniSettimana"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/SCHEALL_tv_GiorniSettimana"
    android:layout_marginLeft="15dp"
    android:layout_toRightOf="@+id/SCHEALL_tv_GiorniSettimana"
    android:entries="@array/giorni_settimana" />

<Spinner
    android:id="@+id/SCHEALL_sp_NSettimane"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/SCHEALL_tv_OgniNSettimane"
    android:layout_marginLeft="15dp"
    android:layout_toRightOf="@+id/SCHEALL_tv_OgniNSettimane"
    android:entries="@array/numero_settimane" />

<EditText
    android:id="@+id/SCHEALL_et_IlGiorno"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/SCHEALL_tv_IlGiorno"
    android:layout_marginLeft="15dp"
    android:layout_toRightOf="@+id/SCHEALL_tv_IlGiorno"
    android:ems="10"
    android:hint="@string/hint_giorno_mese"
    android:inputType="date"
    android:maxLength="5"
    android:width="100dp" />

<TextView
    android:id="@+id/SCHEALL_tv_IlGiorno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/SCHEALL_tv_AlleOre"
    android:layout_below="@+id/SCHEALL_tv_AlleOre"
    android:layout_marginTop="35dp"
    android:text="@string/il_giorno" />

<EditText
    android:id="@+id/SCHEALL_et_AlleOre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/SCHEALL_tv_AlleOre"
    android:layout_marginLeft="15dp"
    android:layout_toRightOf="@+id/SCHEALL_tv_AlleOre"
    android:ems="10"
    android:hint="@string/hint_ora"
    android:inputType="time"
    android:maxLength="5"
    android:width="100dp" />

<TextView
    android:id="@+id/SCHEALL_tv_AlleOre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="5dp"
    android:text="@string/alle_ore" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/SCHEALL_RLayout_AggiornaSalva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SCHEALL_rg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp" >

                    <Button
                        android:id="@+id/SCHEALL_btn_Aggiorna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/aggiorna_medio"
                        android:onClick="OnClickAggiorna"
                        android:text="@string/aggiorna" />

                    <Button
                        android:id="@+id/SCHEALL_btn_Salva"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/SCHEALL_btn_Aggiorna"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/salva_medio"
                        android:onClick="OnClickSalva"
                        android:text="@string/salva" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/SCHEALL_tv_DescrizioneDelGiorno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/SCHEALL_RLayout_Giorno"
                    android:layout_alignRight="@+id/SCHEALL_RLayout_Giorno"
                    android:layout_below="@+id/SCHEALL_RLayout_Giorno"
                    android:text="@string/descrizione_del_giorno" />

                <TextView
                    android:id="@+id/SCHEALL_tv_Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/SCHEALL_tv_ScheAllarme"
                    android:layout_alignBottom="@+id/SCHEALL_tv_ScheAllarme"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/SCHEALL_tv_ScheAllarme"
                    android:text="@string/hello_world" />

            </RelativeLayout>

		    <ProgressBar
		        android:id="@+id/SCHEALL_pb"
		        style="?android:attr/progressBarStyleLarge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_below="@+id/SCHEALL_RLayout_ScheAllarme"
		        android:layout_centerHorizontal="true" />
		    
		</RelativeLayout>
	</HorizontalScrollView>
</ScrollView>